--- a/proyecto-propio/package.json
+++ b/proyecto-propio/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.5.1",
+    "openai": "^5.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
